# sratim-download-manager

./: Cargo.toml  README.org
src/: cli.rs  downloader.rs  main.rs
src/utils/: movie.rs
