[package]
name = "sratim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.16", features=["blocking", "json", "cookies"] }
tokio = { version="1.27.0", features=["full"] }
serde_json = "1.0.1"
serde = { version="1.0.159", features=["derive"] }
serde_derive = "1.0.159"
mongodb="2.4.0"
futures = "0.3.28"
regex = "1.7.3"
question = "0.2.2"
chrono = "0.4.24"
